# ChangeLog for dev-ruby/ruby-gtk2
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk2/ChangeLog,v 1.114 2014/12/07 08:14:55 naota Exp $

*ruby-gtk2-2.2.3 (07 Dec 2014)

  07 Dec 2014; Naohiro Aota <naota@gentoo.org> +ruby-gtk2-2.2.3.ebuild:
  version bump

  21 May 2014; Manuel Rüger <mrueg@gentoo.org> ruby-gtk2-1.1.8.ebuild,
  ruby-gtk2-1.2.6.ebuild:
  Remove ruby18 target.

*ruby-gtk2-2.2.0 (17 Mar 2014)

  17 Mar 2014; Naohiro Aota <naota@gentoo.org> +ruby-gtk2-2.2.0.ebuild:
  version bump

  10 Mar 2014; Manuel Rüger <mrueg@gentoo.org> -ruby-gtk2-1.1.3.ebuild,
  ruby-gtk2-1.1.8.ebuild, ruby-gtk2-1.2.6.ebuild:
  Cleanup old. Remove ree18.

*ruby-gtk2-2.1.0 (15 Jan 2014)

  15 Jan 2014; Naohiro Aota <naota@gentoo.org> +ruby-gtk2-2.1.0.ebuild:
  version bump

*ruby-gtk2-2.0.2 (09 Dec 2013)

  09 Dec 2013; Naohiro Aota <naota@gentoo.org> +ruby-gtk2-2.0.2.ebuild:
  version bump

  17 Aug 2013; Agostino Sarubbo <ago@gentoo.org> ruby-gtk2-1.1.8.ebuild:
  Stable for ppc, wrt bug #480974

  17 Aug 2013; Agostino Sarubbo <ago@gentoo.org> ruby-gtk2-1.1.8.ebuild:
  Stable for x86, wrt bug #480974

  17 Aug 2013; Agostino Sarubbo <ago@gentoo.org> ruby-gtk2-1.1.8.ebuild:
  Stable for amd64, wrt bug #480974

  14 Aug 2013; Hans de Graaff <graaff@gentoo.org> -ruby-gtk2-1.0.3.ebuild,
  -ruby-gtk2-1.1.4.ebuild, -ruby-gtk2-1.1.5.ebuild, -ruby-gtk2-1.1.6.ebuild:
  Cleanup.

*ruby-gtk2-1.2.6 (04 May 2013)

  04 May 2013; Naohiro Aota <naota@gentoo.org> +ruby-gtk2-1.2.6.ebuild:
  version bump

*ruby-gtk2-1.1.8 (26 Dec 2012)

  26 Dec 2012; Hans de Graaff <graaff@gentoo.org> +ruby-gtk2-1.1.8.ebuild:
  Version bump.

*ruby-gtk2-1.1.6 (08 Dec 2012)

  08 Dec 2012; Hans de Graaff <graaff@gentoo.org> +ruby-gtk2-1.1.6.ebuild:
  Version bump.

  16 Oct 2012; Hans de Graaff <graaff@gentoo.org> -ruby-gtk2-0.19.4.ebuild:
  Remove old version.

*ruby-gtk2-1.1.5 (16 Oct 2012)
