@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST ruby-gnome2-all-1.1.8.tar.gz 1018612 SHA256 5118fc18eeff60cbe371e6461dc6329e7c544f1908219df42462274dace5968a SHA512 3ce05278fca4b402f5e8ec9883290022ad07ea800af436ee35ab6a4960e4004a0c076567c68587bee81a27d863ba54de19a7816585ce510d308b7e0e91fb1981 WHIRLPOOL b59ed271675ca8f9b80aeecd7d003537011a7162131176ca202b7a40fafae27cc8da687a50792985f07477dcf310a70d0c512692d649b3584d64653af9cf0e1b
 DIST ruby-gnome2-all-1.2.6.tar.gz 1718802 SHA256 b9e0093e82d53aead93ba1cd261faf03ccede873ee0e7ffd35090ce1c604be66 SHA512 b2e123ece31b89dc1d37040297d726b625d71579bbf60cb84c89b63f0fb9bf097d5f0675a16dfc7aecd8161913c737b22c057cc872dd454f341440c76901c07d WHIRLPOOL 2e4f47014b93838a9c31267fcca86458127ab9bc02b241a6bd0c3f14df8af7a25f6166d294577eb674f59c1e1d042208e5b448c83429011651dc6af0e9383b9a
 DIST ruby-gnome2-all-2.0.2.tar.gz 1674872 SHA256 12656b268206d2d1fc99da4f7163910844efc38117380180f37bfdac249310b9 SHA512 c739a565b14e31905a30e8ebf7cfd6abcf576bb45f3f0eaedba3937fda7818864825d95de5d1c229af5dc09c769d56e788a366cdbf74b625804fb844fd818d6f WHIRLPOOL 662eadbedc9b9e99de1cc6e3556f7bec6063c58c57f4d2ab0b51bbf98eeca9f5955910442a58ff3a7649f3e049f0d0573d83e7a503c0ca58bac3a265f50e121b
@@ -9,6 +12,13 @@ EBUILD ruby-gtk2-1.2.6.ebuild 599 SHA256 32a4907b66e27ec4a0199a17760e3bcda7a9caf
 EBUILD ruby-gtk2-2.0.2.ebuild 638 SHA256 60d45ea297f16c8970992aeca12ab04f049ffcd17234bdf62a4a0a6efd556b07 SHA512 d188df0ef93386cbb3b50563a5baaff07bf00414ab1fa743a32d1848ec789c122b33cd1d570e8bd6c820cd8adbeadebdfe6165b5a7c60b1374c2f905b43e7332 WHIRLPOOL 0a55e37e934dd0f87bf398e3a676bd9a4f643426a04376295cdf8af15f564834c4e6fe5fc93164b786503a3592feb62f4a2c3d6028de9501703bd01e35c5f81a
 EBUILD ruby-gtk2-2.1.0.ebuild 638 SHA256 57cf76c3595d68529f7467213af08a520e00a6226f4adabaabff98c1454e7471 SHA512 583d60b01f6db4dc527790804d5a1c9cbd017d7eb4720798cbd6f8e83d92844f15ad9c39502e7f2852f4b4db5ef504f17295214276a581411e79d05469707203 WHIRLPOOL 2ec9749929528ce96f6f519722a01614fda223365bc61181ffc8cbc84ec3fc223c56a241bd58d2439beac8241d3b1ab0a5a8ef0e900dd25e67a32696bdfc503c
 EBUILD ruby-gtk2-2.2.0.ebuild 638 SHA256 947e609e8c42936d91e7c5ca2c94db0ab2ffabcd220f0730372e3f7f995c2f86 SHA512 9ffe8c35e3997a8fdce19dea93ca5c19ee5edacb9571a3405afb84106b8a71209e5e39c7ca32d97fad91b7744dbdd16d13e27486bb96bff2f2ef212eb9cbfffe WHIRLPOOL 296c34d4fe2f986f346aac5c70891308f21586af54eb29b7f7e502166a0bcdccf3717ba4a4d329e7ecf4fe7ce887bff745b7038af5eff54bcef9ca301dd513fb
-EBUILD ruby-gtk2-2.2.3.ebuild 645 SHA256 aabb0854e8390fa3fa18d501fecd1341c1cc127585ca4bca48258ce035f2c259 SHA512 7107b8ff32ddc34265cf4cb1c74ca57070ef3ea636d719beda952f222b422f6a189d2a5acb4553a74bb3a92bf73c1c45ba43e0363c894c650b42f9be1fdc40fe WHIRLPOOL 3288b545651413151128de6d4f43abf3fa02eb98405225334894b6ccef524f12f323c7425b747e81ced904088139731200dcac4f8fc6fccdcb68eab9fa595d81
-MISC ChangeLog 15412 SHA256 f8660921773c745fad7ac4f74d31b38beea95540efd8518daf2a0012ed6fabe2 SHA512 b26624dd7b20b85b144fdb754d0817cdc50c7278860335a118310a8a5056b8e30d896acff4849b01e8f94bd84d1a35165865c33d446305ee90974dd4f82ff7dd WHIRLPOOL d720d6ae4f0dd8bb049e583c85b7115c1169ccf48e0ab83833d29cb0b49f47631e23dfbd133256f551860bf6fef4777ab92bbd7f40f88eacb84c7d623d5321e4
+EBUILD ruby-gtk2-2.2.3.ebuild 653 SHA256 453f4dfea94a1f7b083c22ebcf3a1daac09380a094f21ce44aa176fd7d9ebfa1 SHA512 ccd009254a799f5fcb1a5b94c4f745101b23dc866a1aae150b0c2e773cb9a366613fece7c09c8d4062f701274d6811f7a2e9a21732e4f663bcca3a2a94a3bd30 WHIRLPOOL 06761f0387347c5c67195a16b0be6e3d82c9268494681f3584720204292a974f3559d5d907bf7ff6d57f5eacb39569eeb1723e8a337f23d81ac03bc213a3a90b
+MISC ChangeLog 15502 SHA256 d59d8e863028b59429514fbc01b1a25f561e3e87887bca3c42340a0412764690 SHA512 46e8c54e7148c8ef15625e1cc75c9a0c93f0f8e35638ceb7b38fb267ce53b690b5db77f8f19c2c0d765b15d3b725908b08005fbb4e5087698261712f2c30839a WHIRLPOOL b0019c5baad03c1dc4f430ea017df8f7bea2d5a4c16e102f53058e63f7bfa13f080137edf3ae7942ca77d3af729cdab700b8135b27006457ac8aa8485d68945d
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlTuHIMACgkQiIP6VqMIqNcb5gD/QhWJIvHT5ocbCJi7TEygCLQS
+lIGkKTuYMPdKTIe3FNIA+wc6umGvCEcw359FdBocZpJpfUJlLQO76qvmxj/6OdRK
+=fRWc
+-----END PGP SIGNATURE-----
