@@ -1,6 +1,9 @@
 # ChangeLog for net-fs/samba
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.710 2015/02/24 10:09:28 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.711 2015/02/25 19:28:09 jer Exp $
+
+  25 Feb 2015; Jeroen Roovers <jer@gentoo.org> samba-3.6.25.ebuild:
+  Stable for HPPA (bug #541182).
 
   24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> samba-3.6.25.ebuild:
   Stable for alpha/amd64/arm/ia64/ppc/ppc64/sparc/x86, wrt bug #541182
