@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-gtk2
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk2/ChangeLog,v 1.114 2014/12/07 08:14:55 naota Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk2/ChangeLog,v 1.115 2015/02/25 19:03:30 graaff Exp $
+
+  25 Feb 2015; Hans de Graaff <graaff@gentoo.org> ruby-gtk2-2.2.3.ebuild:
+  Add ruby22.
 
 *ruby-gtk2-2.2.3 (07 Dec 2014)
 
